--- a/index.html
+++ b/index.html
@@ -1176,15 +1176,15 @@ window.dataLayer = window.dataLayer || [];
                     <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p>
                     <h2>4. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
                     <p class="pspace">
-                        You might know about the super engaging multiplayer battle royale game in the gaming world. This game is called Player Unknown's Battlegrounds (PUBG), and it's broken many records. An Irish man named Brendan Greene created and designed this game. To stand out as a great gamer, every player wants a special and stylish name. Everyone desires their own unique identity. You can achieve this with special weapons, clothes, skins, and most importantly, names. A lot of people play PUBG and they're searching for the perfect name for their characters.
+                        You might know about the super engaging multiplayer battle royale game in the gaming world. This game is called Player Unknown's Battlegrounds (PUBG), and it has broken many records. An Irish man named Brendan Greene created and designed this game. To stand out as a great gamer in PUBG, every player wants a unique and stylish name. Everyone desires their own unique identity. You can achieve this with special weapons, clothes, skins, and most importantly, names. A lot of people play PUBG and they are searching for the perfect name for their characters.
                     </p>
 
                     <h2>5. What Are PUBG Fonts and the PUBG Name Generator?</h2>
-                    <p class="pspace">Having difficulty on deciding PUBG Username? Don not worry, we have got a great solution with the perfect Pubg Name Generator. It is a tool many PUBG players use to create stylish names with cool symbols. You can make unique and stylish nicknames easily by using <a href="https://pubgfont.com/">pubgfonts.com</a>. All the names you create using this tool work perfectly in PUBG Mobile.</p>
+                    <p class="pspace">Having difficulty on deciding PUBG Username? Do not worry, we have got a great solution with the perfect Pubg Name Generator. It is a tool many PUBG players use to create stylish names with cool symbols. You can create unique and stylish nicknames easily by using <a href="https://pubgfont.com/">pubgfonts.com</a>. All the names you create by using this PUBG name generator are compatible in PUBG Mobile.</p>
                     
                     <h2>6. Create Stylish PUBG Names with Symbols and Fonts</h2>
                     <p class="pspace">
-                       <a href="https://pubgfont.com/">Pubgfont.com</a> is better than other tools that make names for PUBG and fonts that look stylish. It gives you many pre-generated cool name fonts and symbols. You can use it to make your own special name with lots of different text styles and symbols. These are important if you want your social media and gaming profiles to look nice. You can also change your current name and add symbols you like. You can use this tool to generate:</p>
+                       <a href="https://pubgfont.com/">Pubgfont.com</a> is better than other tools that create stylish names for PUBG. It gives you many pre-generated stylish name fonts and symbols. You can use this tool to make your own special name with lots of different text styles and symbols. These stylish symbols are important if you want to make your social media and gaming profiles look attractive and stylish. You can use this tool to create:</p>
                         <ul style="padding: 10px;">
                             <li>pubg stylish name</li>
                             <li>pubg name with symbols</li>
@@ -1202,8 +1202,17 @@ window.dataLayer = window.dataLayer || [];
                         <a href="https://pubgfont.com/"><img src="pubgfont.jpeg" class="card-img-bottom" alt="pubgfont" /></a>
                         <div class="card-body">
                             <p class="pspace">
-                                Creating a special and stylish PUBG name with pubgfont is really simple. Just type your name in the box below or paste some text, and our PUBG name generator will give you lots of unique and stylish names with symbols. You can also try different versions of PUBG name generator provided by this tool. When you find the perfect name, just copy and paste it wherever you like. Enhance the look of your PUBG account with our easy to use, simple and user friendly tool
+                                Creating a unique and stylish PUBG name with pubgfont is really simple. Just type your name in the name field below or paste your name there, and our PUBG name generator will give you lots of unique and stylish names with symbols. You can also try different versions of PUBG name generator provided by this tool. When you find the perfect name, just copy and paste it wherever you want. These name styles also compatible for other popular games like:
                             </p>
+
+                            <ul style="padding: 10px; list-style-type: square;">
+                                <li>PlayerUnknown's Battlegrounds (PUBG)</li>
+                                <li>Call of Duty (COD)</li>
+                                <li>Battlegrounds Mobile India (BGMI)</li>
+                                <li>Apex Legend</li>
+                                <li>Fortnite</li>
+                                <li>Free Fire (FF)</li>
+                            </ul>
                             <!--  <p class="card-text"><small class="text-muted">Some text here</small></p> -->
                         </div>
                     </div>
@@ -1222,22 +1231,15 @@ window.dataLayer = window.dataLayer || [];
                                 <li>At the bottom right side, you will see an <b>'Inventory Option'</b>then click on it.</li>
                                 <li>Click on the <b>'Crate Icon'</b> at the bottom, and you will see a Rename Card.</li>
                                 <li>Click on the <b>'Rename Card'</b> to rename or change your name.</li>
-                                <li>Once you have renamed or changed your name, click <b>'OK'</b> to save the change.</li>
+                                <li>Once you have renamed or changed your name, click <b>'OK'</b> to save changes.</li>
                               </ol>
                         </div>
                     </div>
-                    <h2>10. Can I use a stylish PUBG name on social media platforms?</h2>
+                    <h2>10. Can I use a stylish PUBG name on social media apps?</h2>
                     <p class="pspace">
-                        Absolutely! The cool names you make with this tool are great for your social media apps and gaming profiles. They are perfect for platforms like Facebook, Instagram, Twitter, and TikTok. With <a href="https://pubgfont.com/">pubgfont.com</a>, you can create a special and impressive username for all your accounts. It is a popular tool for generating names, especially for PUBG. It has lots of font style options for both social media and gaming. Many people have used it to create awesome profiles by mixing different symbols and letters. These name styles also compatible for other popular games like:
+                        Absolutely Yes! The stylish names you create with this tool are also compatible for social media apps like Facebook, Instagram, TikTok and other social media apps. With <a href="https://pubgfont.com/">pubgfont.com</a>, you can create a special and attractive username for all of your social media profiles. It is a popular tool for generating names, especially for PUBG. It has lots of font style options for both social media and gaming. Many people have used this tool to create engaging profiles by mixing different symbols and letters.
                     </p>
-                    <ul style="padding: 10px; list-style-type: square;">
-                        <li>PlayerUnknown's Battlegrounds (PUBG)</li>
-                        <li>Call of Duty (COD)</li>
-                        <li>Battlegrounds Mobile India (BGMI)</li>
-                        <li>Apex Legend</li>
-                        <li>Fortnite</li>
-                        <li>Free Fire (FF)</li>
-                    </ul>
+                    
                     <h3>Few words from developer:</h3>
                     <p class="pspace">
                         We hope you are using this tool in your daily life to generate unique and stylish names for your gaming and social media profiles. If you are facing any difficulty or encountered any issue in accessing or using this tool, feel free to contact us. We'll keep working on this tool to provide you unique quality content and better user experience.
