--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ window.dataLayer = window.dataLayer || [];
                 <ol>
                     <li><b>'Enter Your Name'</b> in the Input Name Field Above.</li>
                     <li>Select Favorite <b>'Left</b> and <b>Right'</b> Stylish Symbols for Your Name</li>
-                    <li>Customize Your Name and Click on <b>'Copy'</b> to Copy Your Customized Stylish Name with Symbols.</li>
+                    <li>Customize Your Name and Click on <b>'Copy Button'</b> to Copy Your Customized Stylish Name with Symbols.</li>
                 </ol>
             </div>
             <p class="pspace">
