--- a/index.html
+++ b/index.html
@@ -968,9 +968,9 @@ window.dataLayer = window.dataLayer || [];
                 <h2 class="text-center">PUBG Name Generator with Symbols V6.0</h2>
                 <p>Simply follow the easy steps below to create stylish PUBG name with your favorite stylish symbol using the PUBG Name Generator V6.0.</p>
                 <ol style="padding: 10px;">
-                    <li>'Enter Your Name' in the Input Name Field Below.</li>
-                    <li>Click on Your Favorite 'Stylish Symbol' Provided Below to Copy it.</li>
-                    <li>Click on 'Copy' Button to Copy Your Stylish PUBG Name</li>
+                    <li><b>'Enter Your Name'</b> in the Input Name Field Below.</li>
+                    <li>Click on Your Favorite <b>'Stylish Symbol'</b>  Provided Below to Copy it.</li>
+                    <li>Click on <b>'Copy Button'</b> to Copy Your Stylish PUBG Name</li>
                 </ol>
                 <div class="input-group mb-3">
                     <input type="text" class="form-control text-89" placeholder="Create stylish name here..." style="height: 40px;" id="copy_preview" />
@@ -1180,7 +1180,7 @@ window.dataLayer = window.dataLayer || [];
                     </p>
 
                     <h2>5. What Are PUBG Fonts and the PUBG Name Generator?</h2>
-                    <p class="pspace">Having difficulty on deciding PUBG Username? Do not worry, we have got a great solution with the perfect Pubg Name Generator. It is a tool many PUBG players use to create stylish names with cool symbols. You can create unique and stylish nicknames easily by using <a href="https://pubgfont.com/">pubgfonts.com</a>. All the names you create by using this PUBG name generator are compatible in PUBG Mobile.</p>
+                    <p class="pspace">Having difficulty on deciding PUBG Username? Do not worry, we have got a great solution with the perfect Pubg Name Generator. It is a tool that many PUBG players use to create stylish names with cool symbols. You can create unique and stylish nicknames easily by using <a href="https://pubgfont.com/">pubgfonts.com</a>. All the names you create by using this PUBG name generator are compatible in PUBG Mobile.</p>
                     
                     <h2>6. Create Stylish PUBG Names with Symbols and Fonts</h2>
                     <p class="pspace">
