--- a/index.html
+++ b/index.html
@@ -1301,8 +1301,8 @@ window.dataLayer = window.dataLayer || [];
                 });
             }
             
-        // Function to show SweetAlert2 success notification
-        function showSuccessNotification() {
+               // Function to show SweetAlert2 success notification
+               function showSuccessNotification() {
             Swal.fire(
                 'Copied Successfully!',
                 'Text Copied to Clipboard!',
@@ -1339,8 +1339,8 @@ window.dataLayer = window.dataLayer || [];
         });
 
         // Add event listener to all buttons except the "loadmore" button
-        var allButtons = document.querySelectorAll("button:not(.loadmore)");
-        allButtons.forEach(function (button) {
+        var allButtonsExceptLoadMore = document.querySelectorAll("button:not(.loadmore)");
+        allButtonsExceptLoadMore.forEach(function (button) {
             button.addEventListener("click", function () {
                 // Here, you can perform the action for all buttons except the "loadmore" button
 
