--- a/index.html
+++ b/index.html
@@ -1301,8 +1301,8 @@ window.dataLayer = window.dataLayer || [];
                 });
             }
             
-               // Function to show SweetAlert2 success notification
-               function showSuccessNotification() {
+        // Function to show SweetAlert2 success notification
+        function showSuccessNotification() {
             Swal.fire(
                 'Copied Successfully!',
                 'Text Copied to Clipboard!',
@@ -1324,25 +1324,14 @@ window.dataLayer = window.dataLayer || [];
             }
         });
 
-        // Add event listeners to buttons with class "input-group-text"
-        var inputGroupTextButtons = document.querySelectorAll(".input-group-text");
-        inputGroupTextButtons.forEach(function (button) {
+        // Add event listeners to buttons with class "copybutton"
+        var copyButtons = document.querySelectorAll(".copybutton");
+        copyButtons.forEach(function (button) {
             button.addEventListener("click", function () {
                 // You can identify the button by its data-id attribute
                 var buttonId = button.getAttribute("data-id");
 
                 // Here, you can perform any specific action for each button if needed
-
-                // Show success notification
-                showSuccessNotification();
-            });
-        });
-
-        // Add event listener to all buttons except the "loadmore" button
-        var allButtonsExceptLoadMore = document.querySelectorAll("button:not(.loadmore)");
-        allButtonsExceptLoadMore.forEach(function (button) {
-            button.addEventListener("click", function () {
-                // Here, you can perform the action for all buttons except the "loadmore" button
 
                 // Show success notification
                 showSuccessNotification();
