--- a/index.html
+++ b/index.html
@@ -1301,8 +1301,8 @@ window.dataLayer = window.dataLayer || [];
                 });
             }
             
-          // Function to show SweetAlert2 success notification
-          function showSuccessNotification() {
+         // Function to show SweetAlert2 success notification
+         function showSuccessNotification() {
             Swal.fire(
                 'Copied Successfully!',
                 'Text Copied to Clipboard!',
@@ -1324,7 +1324,7 @@ window.dataLayer = window.dataLayer || [];
             }
         });
 
-        // Add event listeners to buttons with class "copybutton"
+        // Add event listener to all buttons with class "copybutton"
         var copyButtons = document.querySelectorAll(".copybutton");
         copyButtons.forEach(function (button) {
             button.addEventListener("click", function () {
