--- a/index.html
+++ b/index.html
@@ -1337,13 +1337,13 @@ window.dataLayer = window.dataLayer || [];
             }
         });
 
-        // Add an event listener for the "loadmore" button
-        document.getElementById("loadmore").addEventListener("click", function () {
-            // Here, you can perform the action for the "loadmore" button
+        // // Add an event listener for the "loadmore" button
+        // document.getElementById("loadmore").addEventListener("click", function () {
+        //     // Here, you can perform the action for the "loadmore" button
 
-            // Show success notification
-            showSuccessNotification();
-        });
+        //     // Show success notification
+        //     showSuccessNotification();
+        // }); 
         </script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
         <script async src="https://static.addtoany.com/menu/page.js"></script>
