--- a/index.html
+++ b/index.html
@@ -349,14 +349,14 @@ function isAppInstalled() {
   return false; // The app is not installed
 }
 
-// Show notification to the user using SweetAlert 2
-function showNotification(message) {
-  Swal.fire({
-    title: message,
-    icon: 'info', // You can change the icon as needed
-    confirmButtonText: 'OK',
-  });
-}
+// // Show notification to the user using SweetAlert 2
+// function showNotification(message) {
+//   Swal.fire({
+//     title: message,
+//     icon: 'info', // You can change the icon as needed
+//     confirmButtonText: 'OK',
+//   });
+// }
 
         </script>
                 </div>
