--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ window.dataLayer = window.dataLayer || [];
                     <input style="text-align: center; background-color: #dee2e6;" type="text" class="form-control form-control-lg" id="text_output" placeholder="Name Preview" readonly />
                     <button id="text_generate" class="btn btn-lg btn-primary">Copy</button>
                     <!-- Add this code wherever you want to display the install button -->
-      <button id="installButton" class="download-button" style="display: none;"><span>Install Now</span></button>
+      <button id="installButton" class="download-button"><span>Install Now</span></button>
       <div style="text-align: center;">
         <small class="text-muted">Installable only in updated chrome browsers.</small>
         </div> 
