--- a/index.html
+++ b/index.html
@@ -299,17 +299,19 @@ window.dataLayer = window.dataLayer || [];
         <small class="text-muted">Installable only in updated chrome browsers.</small>
         </div> 
       <script>
-          let deferredPrompt;
+let deferredPrompt;
 
-window.addEventListener('beforeinstallprompt', (event) => {
-    event.preventDefault();
-    deferredPrompt = event;
-
-    // Check if the app is already installed
+// Check if the app is already installed when the page loads
+window.addEventListener('load', () => {
     if (!isAppInstalled()) {
         // Show the install button only if the app is not installed
         document.getElementById('installButton').style.display = 'block';
     }
+});
+
+window.addEventListener('beforeinstallprompt', (event) => {
+    event.preventDefault();
+    deferredPrompt = event;
 });
 
 // Handle install button click
@@ -346,6 +348,7 @@ function isAppInstalled() {
 
     return false; // The app is not installed
 }
+
         </script>
                 </div>
             </div>
