--- a/index.html
+++ b/index.html
@@ -1198,7 +1198,7 @@ function isAppInstalled() {
                         <a href="https://pubgfont.com/"><img src="pubgfont.jpeg" class="card-img-bottom" alt="pubgfont" /></a>
                         <div class="card-body">
                             <p class="pspace">
-                                Creating a unique and stylish PUBG name with pubgfont is really simple. Just type your name in the name field below or paste your name there, and our PUBG name generator will give you lots of unique and stylish names with symbols. You can also try different versions of PUBG name generator provided by this tool. When you find the perfect name, just copy and paste it wherever you want. These name styles also compatible for other popular games like:
+                                Creating a unique and stylish PUBG name with pubgfont is really easy. Just type your name in the name field below or paste your name there, and our PUBG name generator will give you lots of unique and stylish names with symbols. You can also try different versions of PUBG name generator provided by this tool. When you find the perfect name, just copy and paste it wherever you want. These name styles also compatible for other popular games like:
                             </p>
 
                             <ul style="padding: 10px; list-style-type: square;">
