--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ window.dataLayer = window.dataLayer || [];
 
             .input-group-text {
                background-image: linear-gradient(#16fff3, blue);
-
+               border-radius: 0px;
                 color: white;
             }
 
