--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ window.dataLayer = window.dataLayer || [];
                 position: fixed;
                 top: 180px;
                 right: 20px;
-               background-image: linear-gradient(#16fff3, blue);
+               background: linear-gradient(90deg, #0072ff 0%, #00d4ff 100%);
 
                 color: white;
                 padding: 10px;
@@ -67,7 +67,7 @@ window.dataLayer = window.dataLayer || [];
 
             .btn {
                 display: inline-block;
-                background-image: linear-gradient(#16fff3, blue);
+                background: linear-gradient(90deg, #0072ff 0%, #00d4ff 100%);
                 color: #fff;
                 padding: 10px 30px;
                 border: none;
@@ -78,7 +78,7 @@ window.dataLayer = window.dataLayer || [];
 
             .btn:hover {
                 transform: scale(1.1);
-               background-image: linear-gradient(#16fff3, blue);
+               background: linear-gradient(90deg, #0072ff 0%, #00d4ff 100%);
 
             }
 
@@ -105,7 +105,7 @@ window.dataLayer = window.dataLayer || [];
             }
 
             .input-group-text {
-               background-image: linear-gradient(#16fff3, blue);
+               background: linear-gradient(90deg, #0072ff 0%, #00d4ff 100%);
                border-radius: 0px;
                 color: white;
             }
@@ -116,7 +116,7 @@ window.dataLayer = window.dataLayer || [];
                 border-color: #16fff3;
             } */
             .bg-warning {
-               background-image: linear-gradient(#16fff3, blue);
+               background: linear-gradient(90deg, #0072ff 0%, #00d4ff 100%);
 
                 /* background-image: linear-gradient(#163a38, blue); */
             }
