--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ window.dataLayer = window.dataLayer || [];
             }
 
             .form-control {
-                border: 1px solid blue;
+                border: 1px solid #0067e5;
             }
 
             .input-group-text {
