--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@ function isAppInstalled() {
             <div class="container">
                 <ol>
                     <li><b>'Enter Your Name'</b> in the Input Name Field Above.</li>
-                    <li>Select Favorite <b>'Left</b> and <b>Right'</b> Stylish Symbols for Your Name</li>
-                    <li>Customize Your Name and Click on <b>'Copy Button'</b> to Copy Your Customized Stylish Name with Symbols.</li>
+                    <li>Select Favorite Left and Right <b>'Stylish Symbols'</b> for Your Name</li>
+                    <li>Customize Your Name and Click on <b>'Copy Button'</b> to copy Your Customized Stylish Name with Symbols.</li>
                 </ol>
             </div>
             <p class="pspace">
