--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ function isAppInstalled() {
                     </p>
                 </div>
             </div>
-            <div class="container">
+            <div>
                 <ol>
                     <li><b>'Enter Your Name'</b> in the Input Name Field Above.</li>
                     <li>Select Favorite Left and Right <b>'Stylish Symbols'</b> for Your Name</li>
