--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="pubgfont is a popular and latest PUBG Name Generator that allows you to create stylish PUBG name with cool, stylish and unique symbols" />
         <meta
             name="keywords"
-            content="PUBG name generator, Stylish PUBG names, Cool PUBG names, Unique PUBG names, Creative PUBG names, PUBG gamer names, Customized PUBG names, PUBG name ideas, Stylish symbols for PUBG names, Free PUBG name generator, Best PUBG name generator, PUBG name creator, PUBG username generator, Online gaming names, Trending PUBG names, Unique symbols for PUBG names, Top PUBG names, PUBG name suggestions, PUBG name inspiration, Stylish PUBG username ideas, Cool symbols for PUBG names, Customized PUBG usernames, PUBG nickname generator, Creative PUBG name generator, Best PUBG clan names, PUBG squad names, Gaming username ideas, Online game names."
+            content="PUBG name generator, Stylish PUBG name, Cool PUBG name, Unique PUBG name, Creative PUBG name, PUBG gamer name, Customized PUBG name, PUBG name ideas, Stylish symbols for PUBG name, Free PUBG name generator, Best PUBG name generator, PUBG name creator, PUBG username generator, Online gaming name, Trending PUBG name, Unique symbols for PUBG name, Top PUBG name, PUBG name suggestions, PUBG name inspiration, Stylish PUBG username ideas, Cool symbols for PUBG name, Customized PUBG username, PUBG nickname generator, Creative PUBG name generator, Best PUBG clan name, PUBG squad name, Gaming username ideas, Online game name."
         />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="author" content="Dilawar Khan"/>
@@ -353,7 +353,7 @@ function isAppInstalled() {
                 <div class="col text-center">
                     <h2 class="text-center"><strong>PUBG Name Generator Latest Version 6.1 (Copy/Paste) 😍🔥</strong></h2>
                     <p class="pspace">
-                        Generate <b>Stylish PUBG Names</b> using your favorite stylish symbols with a simple copy and paste. All the names and symbols provided by this PUBG Name Generator are 100% compatible and acceptable in PUBG as we have tested
+                        Generate <b>Stylish PUBG name</b> using your favorite stylish symbols with a simple copy and paste. All the name and symbols provided by this PUBG Name Generator are 100% compatible and acceptable in PUBG as we have tested
                         them manually. Here are some easy and simple steps to create a stylish name using the PUBG Name Generator Latest Version 6.1.
                     </p>
                 </div>
@@ -1170,25 +1170,25 @@ function isAppInstalled() {
                     <p class="card-text"><small class="text-muted">Updated few mins ago.</small></p>
                     <h2>4. History of PlayerUnknown's Battlegrounds (PUBG)</h2>
                     <p class="pspace">
-                        You might know about the super engaging multiplayer battle royale game in the gaming world. This game is called Player Unknown's Battlegrounds (PUBG), and it has broken many records. An Irish man named Brendan Greene created and designed this game. To stand out as a great gamer in PUBG, every player wants a unique and stylish name. Everyone desires their own unique identity. You can achieve this with special weapons, clothes, skins, and most importantly, names. A lot of people play PUBG and they are searching for the perfect name for their characters.
+                        You might know about the super engaging multiplayer battle royale game in the gaming world. This game is called Player Unknown's Battlegrounds (PUBG), and it has broken many records. An Irish man named Brendan Greene created and designed this game. To stand out as a great gamer in PUBG, every player wants a unique and stylish name. Everyone desires their own unique identity. You can achieve this with special weapons, clothes, skins, and most importantly, name. A lot of people play PUBG and they are searching for the perfect name for their characters.
                     </p>
 
                     <h2>5. What Are PUBG Fonts and the PUBG Name Generator?</h2>
-                    <p class="pspace">Having difficulty on deciding PUBG Username? Do not worry, we have got a great solution with the perfect Pubg Name Generator. It is a tool that many PUBG players use to create stylish names with cool symbols. You can create unique and stylish nicknames easily by using <a href="https://pubgfont.com/">pubgfonts.com</a>. All the names you create by using this PUBG name generator are compatible in PUBG Mobile.</p>
+                    <p class="pspace">Having difficulty on deciding PUBG Username? Do not worry, we have got a great solution with the perfect Pubg Name Generator. It is a tool that many PUBG players use to create stylish name with cool symbols. You can create unique and stylish nickname easily by using <a href="https://pubgfont.com/">pubgfonts.com</a>. All the name you create by using this PUBG name generator are compatible in PUBG Mobile.</p>
                     
-                    <h2>6. Create Stylish PUBG Names with Symbols and Fonts</h2>
+                    <h2>6. Create Stylish PUBG name with Symbols and Fonts</h2>
                     <p class="pspace">
-                       <a href="https://pubgfont.com/">Pubgfont.com</a> is better than other tools that create stylish names for PUBG. It gives you many pre-generated stylish name fonts and symbols. You can use this tool to make your own special name with lots of different text styles and symbols. These stylish symbols are important if you want to make your social media and gaming profiles look attractive and stylish. You can use this tool to create:</p>
+                       <a href="https://pubgfont.com/">Pubgfont.com</a> is better than other tools that create stylish name for PUBG. It gives you many pre-generated stylish name fonts and symbols. You can use this tool to make your own special name with lots of different text styles and symbols. These stylish symbols are important if you want to make your social media and gaming profiles look attractive and stylish. You can use this tool to create:</p>
                         <ul style="padding: 10px;">
                             <li>pubg stylish name</li>
                             <li>pubg name with symbols</li>
                             <li>pubg name style font</li>
-                            <li>pubg names with space</li>
-                            <li>attitude names for pubg</li>
+                            <li>pubg name with space</li>
+                            <li>attitude name for pubg</li>
                             <li>pubg name symbols</li>
-                            <li>pubg names for boys</li>
+                            <li>pubg name for boys</li>
                             <li>name generator for pubg</li>
-                            <li>PUBG names for girls</li>
+                            <li>PUBG name for girls</li>
                         </ul>
                              <!--       Added Card -->
                     <h2>7. How to Generate a stylish name for PUBG?</h2>
@@ -1196,7 +1196,7 @@ function isAppInstalled() {
                         <a href="https://pubgfont.com/"><img src="pubgfont.jpeg" class="card-img-bottom" alt="pubgfont" /></a>
                         <div class="card-body">
                             <p class="pspace">
-                                Creating a unique and stylish PUBG name with pubgfont is really easy. Just type your name in the name field below or paste your name there, and our PUBG name generator will give you lots of unique and stylish names with symbols. You can also try different versions of PUBG name generator provided by this tool. When you find the perfect name, just copy and paste it wherever you want. These name styles also compatible for other popular games like:
+                                Creating a unique and stylish PUBG name with pubgfont is really easy. Just type your name in the name field below or paste your name there, and our PUBG name generator will give you lots of unique and stylish name with symbols. You can also try different versions of PUBG name generator provided by this tool. When you find the perfect name, just copy and paste it wherever you want. These name styles also compatible for other popular games like:
                             </p>
 
                             <ul style="padding: 10px; list-style-type: square;">
@@ -1213,7 +1213,7 @@ function isAppInstalled() {
                     <!--  Ended Card -->
                      <h2>8. How to generate a stylish name for social media profiles?</h2>
                     <p class="pspace">
-                        If you want a stylish name for your social media profile, just enter your name in the field below. This tool will give you different stylish names with emojis and symbols. Pick the font style you like, then click 'Copy' to get your stylish name with cool and unique text fonts.
+                        If you want a stylish name for your social media profile, just enter your name in the field below. This tool will give you different stylish name with emojis and symbols. Pick the font style you like, then click 'Copy' to get your stylish name with cool and unique text fonts.
                     </p>
                     <h2>9. How to rename or change your name in PUBG Mobile?</h2>
                     <div class="card">
@@ -1231,12 +1231,12 @@ function isAppInstalled() {
                     </div>
                     <h2>10. Can I use a stylish PUBG name on social media apps?</h2>
                     <p class="pspace">
-                        Absolutely Yes! The stylish names you create with this tool are also compatible for social media apps like Facebook, Instagram, TikTok and other social media apps. With <a href="https://pubgfont.com/">pubgfont.com</a>, you can create a special and attractive username for all of your social media profiles. It is a popular tool for generating names, especially for PUBG. It has lots of font style options for both social media and gaming. Many people have used this tool to create engaging profiles by mixing different symbols and letters.
+                        Absolutely Yes! The stylish name you create with this tool are also compatible for social media apps like Facebook, Instagram, TikTok and other social media apps. With <a href="https://pubgfont.com/">pubgfont.com</a>, you can create a special and attractive username for all of your social media profiles. It is a popular tool for generating name, especially for PUBG. It has lots of font style options for both social media and gaming. Many people have used this tool to create engaging profiles by mixing different symbols and letters.
                     </p>
                     
                     <h3>Few words from developer:</h3>
                     <p class="pspace">
-                        We hope you are using this tool in your daily life to generate unique and stylish names for your gaming and social media profiles. If you are facing any difficulty or encountered any issue in accessing or using this tool, feel free to contact us. We'll keep working on this tool to provide you unique quality content and better user experience.
+                        We hope you are using this tool in your daily life to generate unique and stylish name for your gaming and social media profiles. If you are facing any difficulty or encountered any issue in accessing or using this tool, feel free to contact us. We'll keep working on this tool to provide you unique quality content and better user experience.
                     </p>
                     <p class="card-text"><small class="text-muted">Last updated few mins ago</small></p>
                     <hr />
