--- a/index.html
+++ b/index.html
@@ -1174,7 +1174,7 @@ function isAppInstalled() {
                     </p>
 
                     <h2>5. What Are PUBG Fonts and the PUBG Name Generator?</h2>
-                    <p class="pspace">Having difficulty on deciding PUBG Username? Do not worry, we have got a great solution with the perfect Pubg Name Generator. It is a tool that many PUBG players use to create stylish name with cool symbols. You can create unique and stylish nickname easily by using <a href="https://pubgfont.com/">pubgfonts.com</a>. All the name you create by using this PUBG name generator are compatible in PUBG Mobile.</p>
+                    <p class="pspace">Having difficulty on deciding PUBG Username? Do not worry, we have got a great solution with the perfect Pubg Name Generator. It is a tool that many PUBG players use to create stylish name with cool symbols. You can create unique and stylish nickname easily by using <a href="https://pubgfont.com/">pubgfonts.com</a>.
                     
                     <h2>6. Create Stylish PUBG name with Symbols and Fonts</h2>
                     <p class="pspace">
